analysis from 2016 to 2020.

--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -9,7 +9,7 @@
     "from analysis.pre_process import DataProcess\n",
     "\n",
     "# 默认读取内置的数据集\n",
-    "process = DataProcess()"
+    "process = DataProcess('002677')"
    ]
   },
   {
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "长期借款(元), 应付债券(元), 以公允价值计量且其变动计入当期损益的金融资产(元), 债权投资(元), 持有至到期投资(元), 其他非流动金融资产(元), 以上字段未找到，已自动赋值为0。\n",
+      "一年内到期的非流动负债(元), 长期借款(元), 应付债券(元), 以公允价值计量且其变动计入当期损益的金融资产(元), 债权投资(元), 其他非流动金融资产(元), 长期股权投资(元), 商誉(元), 以上字段未找到，已自动赋值为0。\n",
       "\n",
       "！以下字段须手动赋值：其他流动资产里的理财产品,其他流动资产里的结构性存款,长期应付款,应收款项融资,合同负债(元),合同资产(元)\n"
      ]
@@ -38,23 +38,31 @@
    "outputs": [],
    "source": [
     "# 18年及之前的科目\n",
-    "debt_df['其他流动资产里的理财产品'] = [0, 0, 1500000000, 2570000000, 0, 0]\n",
+    "debt_df['其他流动资产里的理财产品'] = [370000000.00, 550000000.00, 0, 0, 0, 0]\n",
     "debt_df['其他流动资产里的结构性存款'] = [0, 0, 0, 0, 0, 0]\n",
     "\n",
     "# 用来计算有息负债，如果是无息则直接写 0 即可\n",
     "debt_df['长期应付款'] = [0, 0, 0, 0, 0, 0]\n",
     "\n",
     "# 2019 年及之后的科目\n",
-    "debt_df['应收款项融资'] = [0, 0, 0, 0, 408972104.07, 0]\n",
-    "debt_df['合同资产(元)'] = [0, 0, 0, 0, 0, 0]\n",
-    "debt_df['合同负债(元)'] = [0, 0, 0, 0, 0, 949591228.35]"
+    "debt_df['应收款项融资'] = [0, 0, 0, 0, 5815852.74, 3600000.00]\n",
+    "debt_df['合同资产(元)'] = [0, 0, 0, 0, 0, 1422476.74]\n",
+    "debt_df['合同负债(元)'] = [0, 0, 0, 0, 0, 142761359.85]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "其中：利息费用(元), 以上字段未找到，已自动赋值为0。\n"
+     ]
+    }
+   ],
    "source": [
     "benefit_df = process.read_data('benefit')\n",
     "cash_df = process.read_data('cash')"
@@ -98,12 +106,12 @@
     {
      "data": {
       "text/plain": [
-       "2015    65957900.00\n",
-       "2016    78635300.00\n",
-       "2017    93430000.00\n",
-       "2018   100909000.00\n",
-       "2019    84590700.00\n",
-       "2020   160282600.00\n",
+       "2015    2587200.00\n",
+       "2016    2317900.00\n",
+       "2017    2613300.00\n",
+       "2018    4414400.00\n",
+       "2019   13407400.00\n",
+       "2020   22062400.00\n",
        "Name: 利息收入(元), dtype: float64"
       ]
      },
@@ -127,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "Int64Index([2015, 2016, 2017, 2018], dtype='int64')"
+       "Int64Index([2015, 2016, 2017, 2018, 2019, 2020], dtype='int64')"
       ]
      },
      "execution_count": 7,
@@ -148,13 +156,13 @@
     {
      "data": {
       "text/plain": [
-       "2015         0.00\n",
-       "2016         0.00\n",
-       "2017         0.00\n",
-       "2018         0.00\n",
-       "2019    477400.00\n",
-       "2020   6721500.00\n",
-       "Name: 其中：利息费用(元), dtype: float64"
+       "2015    0\n",
+       "2016    0\n",
+       "2017    0\n",
+       "2018    0\n",
+       "2019    0\n",
+       "2020    0\n",
+       "Name: 其中：利息费用(元), dtype: int64"
       ]
      },
      "execution_count": 8,
